fixed alignment issues with footer and added margin-top of -12rem

--- a/OpenJobs/walterCosmopolis/walter_cosmopolis/sass/components/_footer.scss
+++ b/OpenJobs/walterCosmopolis/walter_cosmopolis/sass/components/_footer.scss
@@ -6,7 +6,32 @@
   background-size: cover;
   background-position: top;
   position: relative;
+  margin-top:-12rem;
+
+  clip-path: polygon(0 8%, 100% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 8%, 100% 0, 100% 100%, 0 100%); 
+}
+
+@media only screen and (min-width: 490px){
+  .footer {
+
+  clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
+  }
+}
+
+@media only screen and (min-width: 686px){
+  .footer {
+
+  clip-path: polygon(0 11%, 100% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 11%, 100% 0, 100% 100%, 0 100%);
+  }
+}
+
+@media only screen and (min-width: 752px){
+  .footer {
 
   clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-  -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); 
+  -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+  }
 }
